--- a/package.json
+++ b/package.json
@@ -56,9 +56,14 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
     "react-fittext": "^1.0.0",
+    "react-hls": "0.0.8",
     "react-media": "^1.8.0",
+    "react-player": "^1.7.1",
     "react-router-dom": "^4.3.1",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "video.js": "^6.9.0",
+    "videojs-contrib-hls": "^5.14.1",
+    "videojs-for-react": "0.0.3"
   },
   "devDependencies": {
     "@types/react": "^16.7.7",
