--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "px2rem-loader": "^0.1.9",
     "qs": "^6.6.0",
     "rc-animate": "^2.4.4",
+    "rc-tween-one": "^2.2.19",
     "react": "^16.6.3",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
