--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash-decorators": "^6.0.0",
     "memoize-one": "^4.0.0",
     "moment": "^2.22.2",
+    "npm": "^6.7.0",
     "nzh": "^1.0.3",
     "omit.js": "^1.0.0",
     "path-to-regexp": "^2.4.0",
